--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
         <version>${spark.version}</version>
     </dependency>
 
+      <!--orientdb-->
+
+     <dependency>
+         <groupId>org.apache.spark</groupId>
+         <artifactId>spark-orientdb-2.2.1_2.11</artifactId>
+         <version>1.4</version>
+     </dependency>
+
+        <!--Common-->
+
     </dependencies>
 
     <build>
