--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,21 @@
         <version>${spark.version}</version>
     </dependency>
 
-      <!--orientdb-->
+        <!--snappydata database-->
 
-     <dependency>
-         <groupId>org.apache.spark</groupId>
-         <artifactId>spark-orientdb-2.2.1_2.11</artifactId>
-         <version>1.4</version>
-     </dependency>
+        <dependency>
+            <groupId>io.snappydata</groupId>
+            <artifactId>snappydata-core_2.11</artifactId>
+            <version>1.0.2.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.snappydata</groupId>
+            <artifactId>snappy-spark-core_2.11</artifactId>
+            <version>2.1.1.4</version>
+        </dependency>
+
 
         <!--Common-->
 
